# suiji

./: .gitignore  README.md  typst.toml
benches/: bench-halton-1.typ  bench-halton-2.typ  bench-halton-f-1.typ  bench-halton-f-2.typ  bench-integers-1.typ  bench-integers-2.typ  bench-integers-3.typ  bench-integers-f-1.typ  bench-integers-f-2.typ  bench-integers-f-3.typ  bench-normal-1.typ  bench-normal-2.typ  bench-normal-3.typ  bench-normal-f-1.typ  bench-normal-f-2.typ  bench-normal-f-3.typ  bench-shuffle-1.typ  bench-shuffle-2.typ  bench-shuffle-3.typ  bench-shuffle-f-1.typ  bench-shuffle-f-2.typ  bench-shuffle-f-3.typ  bench-uniform-1.typ  bench-uniform-2.typ  bench-uniform-3.typ  bench-uniform-f-1.typ  bench-uniform-f-2.typ  bench-uniform-f-3.typ  run.sh
doc/: cover.typ  manual.typ  preamble.typ
src/: chinese.typ  core.wasm  random-fast.typ  random.typ
tests/: 2d-random-dist-fast.typ  2d-random-dist.typ  compile.sh  random-bitmap-fast.typ  random-bitmap.typ  test-choice.typ  test-discrete.typ  test-haltonset-f.typ  test-haltonset.typ  test-integers.typ  test-normal.typ  test-random.typ  test-uniform.typ
tests/choice/test-choice/: test.typ
tests/choice/test-choice-f/: test.typ
tests/discrete/test-discrete/: test.typ
tests/discrete/test-discrete-f/: test.typ
tests/haltonset/test-2d-random-dist/: test.typ
tests/haltonset/test-2d-random-dist-fast/: test.typ
tests/haltonset/test-haltonset/: test.typ
tests/haltonset/test-haltonset-f/: test.typ
tests/integers/test-integers-f/: test.typ
wasm/: Cargo.toml  run.sh
wasm/src/: lib.rs
(+12 files in other folders)
